# MovTix

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.bat
include/: auth.h  booking.h  globals.h  movie.h  structures.h  types.h  ui.h  utils.h
src/: auth.cpp  booking.cpp  globals.cpp  main.cpp  movie.cpp  ui.cpp  utils.cpp
